# Teleport

./: .clang-format  .gitignore  .gitmodules  ANSWER_TO_ORIGINAL_QUESTION.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION_GUIDE.md  CUBEMAP_REARRANGEMENT_ANALYSIS.md  CUBEMAP_TRANSFORMATION_README.md  CUBEMAP_USAGE_SUMMARY.md  GEOMETRY_RESOURCE_DEBUGGING.md  IMPLEMENTATION_SUMMARY.md  README.md  index.rst
.github/workflows/: build_android_client.yml  build_linux_client.yml  build_pc_client.yml  docs.yml
.reuse/: dep5
AndroidClient/: AndroidOpenXR.cpp  CmdBuffer.cpp  FileLoader.cpp  NdkVideoDecoder.cpp  VideoDecoderBackend.cpp  graphicsplugin_vulkan.cpp  main.cpp
ClientRender/: Animation.cpp  Animation.h  AnimationDecoder.cpp  AnimationInstance.cpp  AnimationInstance.h  AnimationRetargeter.cpp  AnimationRetargeter.h  CMakeLists.txt  Camera2D.cpp  CanvasTextRenderer.cpp  Common.cpp  Common.h  CubemapGenerator.cpp  CubemapGenerator.h  CubemapGeneratorExample.cpp  CubemapGeneratorExample.h  CubemapGenerator_README.md  GeometryCache.cpp  GeometryCache.h  GeometryDecoder.cpp  GeometryDecoder.h  Gui.cpp  Gui.h  InstanceRenderer.cpp  InstanceRenderer.h  Light.h  Mesh.cpp  Mesh.h  MeshDecoder.cpp  MeshDecoder.h  Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  Renderer.cpp  Renderer.h  ResourceCreator.cpp  ResourceCreator.h  ResourceManager.h  Skeleton.cpp  (+10 more)
ClientRender/AVParser/: BitReader.cpp  BitReader.h  HevcParser.cpp
ClientRender/NodeComponents/: AnimationComponent.cpp  AnimationComponent.h  AnimationState.cpp  AnimationState.h  Component.h  SubSceneComponent.cpp  SubSceneComponent.h
ClientRender/ozz/: gltf2ozz.h
TeleportAudio/: AndroidAudioPlayer.cpp  AudioCommon.cpp  AudioCommon.h  AudioPlayer.h  CMakeLists.txt  LinuxAudioPlayer.cpp  LinuxAudioPlayer.h  NetworkPipeline.cpp  PC_AudioCapture.cpp  PC_AudioPlayer.cpp
TeleportClient/: AvatarManager.cpp  AvatarManager.h  CMakeLists.txt  ClientDeviceState.cpp  ClientPipeline.cpp  ClientPipeline.h  Config.cpp  Config.h  DiscoveryService.cpp  DiscoveryService.h  GeometryCacheBackendInterface.h  GoogleOAuth.cpp  GoogleOAuth.h  Identity.cpp  Identity.h  Log.cpp  OpenXR.cpp  OpenXRRenderModel.cpp  SessionClient.cpp  SessionClient.h  SignalingServer.cpp  SignalingServer.h  TabContext.cpp  TabContext.h  TokenStorage.cpp  TokenStorage.h  URLHandlers.cpp  V8ProcessManager.cpp  V8ProcessManager.h  basic_linear_algebra.h
TeleportCore/: Animation.cpp  Animation.h  AvatarsJson.cpp  CMakeLists.txt  DecodeMesh.cpp  DecodeMesh.h  ErrorHandling.cpp  ErrorHandling.h  FontAtlas.cpp  FontAtlas.h  Input.cpp  Logging.h  ResourceStreams.h  TextCanvas.h  Threads.h  URLParser.cpp
TeleportCore/export_include/TeleportCore/: Avatars.h  CommandLogging.h  CommonNetworking.h  InputTypes.h
TeleportServer/: AudioEncodePipeline.cpp  AvatarService.cpp  AvatarService.h  AvatarValidationCache.h  CMakeLists.txt  ClientData.cpp  ClientData.h  ClientManager.cpp  ClientMessaging.cpp  ClientMessaging.h  ClientNetworkContext.cpp  CubemapKTX2Transformer.cpp  CubemapRearrangement.h  CubemapRearrangementExample.cpp  DefaultHTTPService.cpp  ExtractedTypes.h  Font.cpp  Font.h  GeometryEncoder.cpp  GeometryEncoder.h  GeometryStore.cpp  GeometryStore.h  GeometryStreamingService.cpp  GeometryStreamingService.h  IAvatarValidator.h  NetworkPipeline.cpp  SignalingService.cpp  SignalingService.h  SourceNetworkPipeline.cpp  Texture.cpp  VideoEncodePipeline.cpp
TeleportServer/Plugin/: PluginClient.cpp  PluginMain.cpp
TeleportServer/export_include/TeleportServer/: Exports.h  InteropStructures.h
Utils/: CMakeLists.txt
Utils/CubemapConverter/: CMakeLists.txt  CubemapConverter.cpp  README.md
client/: imgui.ini  index.rst  jaVuSerif_atlas.atlas
client/JavaScriptWorker/: Main.cpp  SceneObjectModel.cpp  Test.cpp
client/Shaders/: canvas_text.sfx  pbr.sfx  pbr_constants.sl
docs/: CMakeLists.txt  Doxyfile.in  DoxyfileUnity.in  DoxyfileUnreal.in  conf.py  introduction.rst  protocol.rst  tidy_files.sh
docs/nodejs/: index.rst
docs/protocol/: audio.rst  conventions.rst  data_transfer.rst  geometry_payload.rst  http.rst  input.rst  service.rst  signaling.rst  state_machine.rst
docs/protocol/service/: client_to_server.rst  server_to_client.rst
docs/reference/: index.rst  libavstream.rst  teleportcore.rst  video_ndk_decoding.rst  video_vulkan_android_import_and_ycbcr.rst
docs/reference/unity/: index.rst
docs/reference/unreal/: index.rst
docs/unity/: index.rst
docs/unreal/: index.rst
libavstream/: CMakeLists.txt
libavstream/export_include/libavstream/: common_exports.h  common_maths.h  common_networking.h  material_exports.h  node.h
libavstream/include/libavstream/: audiodecoder.h  audiodecoder_opus.h  audioencoder_opus.h  common.hpp  encoder.hpp  genericdecoder.h  geometrydecoder.hpp  geometryencoder.hpp  httputil.hpp  libavstream.hpp  lock_free_queue.h  node.hpp  packetizer.hpp  pipeline.hpp  tagdatadecoder.hpp
libavstream/jni/: Android.mk
libavstream/src/: audiodecoder_opus.cpp  audioencoder_opus.cpp  decoder.cpp  forwarder.cpp  geometrydecoder.cpp  geometryencoder.cpp  httputil.cpp  lock_free_queue.cpp  logger.cpp  logger.hpp  pipeline.cpp
libavstream/src/encoders/: enc_nvidia.cpp
libavstream/src/network/: networksource_p.hpp  webrtc_common.cpp  webrtc_networksink.cpp  webrtc_networksource.cpp
libavstream/src/stream/: parser_avc.cpp
pc_client/: CMakeLists.txt  Icon.rc  Main.cpp  MemoryUtil.cpp  ProcessHandler.cpp  ProcessHandler.h  TeleportXR.desktop  UnixDebugOutput.h  UseOpenXR.cpp
test/: CMakeLists.txt  test_avatar_manager.cpp  test_avatar_service.cpp  test_avatar_validation_cache.cpp  test_avatars.cpp
(+11 files in other folders)
